feat(staffRecruitmentNumberOfInterviewsAmendments): Updated Question component to have new sections, updated progress bar to take a header param and began making amendments on number of interviews

--- a/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
+++ b/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
@@ -33,7 +33,7 @@
       <div *ngIf="!return" class="govuk-util__float-right">
         <app-progress-bar
           data-testid="progress-bar"
-          [sections]="sections"
+          [sections]="workplaceFlowSections"
           [currentSection]="section"
         ></app-progress-bar>
       </div>
