--- a/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
+++ b/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
@@ -89,10 +89,25 @@
       </fieldset>
     </div>
     <div class="govuk-grid-column-one-third">
-      <div *ngIf="!return" class="govuk-util__float-right">
+      <div *ngIf="!return && !inStaffRecruitmentFlow" class="govuk-util__float-right">
         <app-progress-bar
           data-testid="progress-bar"
-          [sections]="sections"
+          [header]="'Recruitment'"
+          [sections]="workplaceFlowSections"
+          [currentSection]="section"
+        ></app-progress-bar>
+      </div>
+      <div *ngIf="!return && inStaffRecruitmentFlow" class="govuk-util__float-right">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [header]="'Recruitment'"
+          [sections]="recruitmentSections"
+          [currentSection]="section"
+        ></app-progress-bar>
+        <app-progress-bar
+          data-testid="progress-bar"
+          [header]="'Staff benefits'"
+          [sections]="staffBenefitsSections"
           [currentSection]="section"
         ></app-progress-bar>
       </div>
