--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -157,7 +157,7 @@
       <div *ngIf="!return" class="govuk-util__float-right">
         <app-progress-bar
           data-testid="progress-bar"
-          [sections]="sections"
+          [sections]="workplaceFlowSections"
           [currentSection]="section"
         ></app-progress-bar>
       </div>
