--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -1,24 +1,26 @@
 <div class="asc-progress-bar govuk-!-margin-right-2 govuk-!-margin-top-2">
-  <h4 class="govuk-!-margin-bottom-2">{{ header }}</h4>
+  <div *ngIf="header">
+    <h4 class="govuk-!-margin-bottom-2">{{ header }}</h4>
+  </div>
   <ng-container *ngFor="let section of sections; index as i">
     <div class="govuk__flex">
       <div class="govuk-!-margin-right-3">
         <img
-          *ngIf="i < currentSectionIndex"
+          *ngIf="i < currentSectionIndex || completeProgressBar"
           [attr.data-testid]="'completed-' + i"
           class="govuk-util__vertical-align-top"
           src="/assets/images/progress-bar/done.svg"
           alt=""
         />
         <img
-          *ngIf="i === currentSectionIndex"
+          *ngIf="i === currentSectionIndex && !completeProgressBar"
           [attr.data-testid]="'currentSection-' + i"
           class="govuk-util__vertical-align-top"
           src="/assets/images/progress-bar/doing.svg"
           alt=""
         />
         <img
-          *ngIf="i > currentSectionIndex"
+          *ngIf="i > currentSectionIndex && !completeProgressBar"
           [attr.data-testid]="'todo-' + i"
           class="govuk-util__vertical-align-top"
           src="/assets/images/progress-bar/todo.svg"
@@ -29,7 +31,9 @@
         <span
           class="govuk-!-font-size-16"
           [ngClass]="
-            (currentSectionIndex > i && 'govuk-!-font-weight-bold') || (currentSectionIndex < i && 'asc-colour-grey')
+            completeProgressBar ||
+            (currentSectionIndex > i && 'govuk-!-font-weight-bold') ||
+            (currentSectionIndex < i && 'asc-colour-grey')
           "
         >
           {{ section }}
