add new back link to app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   >
     <app-phase-banner></app-phase-banner>
     <app-back-link></app-back-link>
+    <app-new-back-link></app-new-back-link>
     <app-breadcrumbs></app-breadcrumbs>
     <app-alert></app-alert>
 
