--- a/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
+++ b/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
@@ -98,13 +98,13 @@
       </div>
       <div *ngIf="!return && inStaffRecruitmentFlow" class="govuk-util__float-right">
         <app-progress-bar
-          data-testid="progress-bar"
+          data-testid="progress-bar-2"
           [header]="'Recruitment'"
           [sections]="recruitmentSections"
           [currentSection]="section"
         ></app-progress-bar>
         <app-progress-bar
-          data-testid="progress-bar"
+          data-testid="progress-bar-3"
           [header]="'Staff benefits'"
           [sections]="staffBenefitsSections"
           [currentSection]="section"
