feat(feat/staffRecruitmentStartAmendments): Removed unnecessary capitalisation and edited a bullet point text wrap

--- a/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
+++ b/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters-from-desktop">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Staff Recruitment and retention</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Staff recruitment and retention</h1>
     <p class="govuk-inset-text">
       We've added 8 new questions. If necessary, you can skip questions and answer them later in the Workplace section
       of ASC-WDS.
@@ -18,7 +18,7 @@
         </p>
       </li>
       <li>
-        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0 govuk__nowrap">
           whether new care workers have to repeat training done with previous employers?
         </p>
       </li>
