--- a/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
+++ b/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
@@ -11,6 +11,59 @@
           <div class="govuk-!-margin-bottom-6">
             <p>We only want to know about bonuses given for staying in a role, not for things like performance.</p>
           </div>
+
+          <div class="govuk-radios govuk-radios--conditional govuk-!-margin-bottom-8">
+            <ng-container *ngFor="let option of cashLoyaltyRequiredOptions; let i = index">
+              <div class="govuk-radios__item">
+                <input
+                  aria-controls="grantLetter-conditional-1"
+                  class="govuk-radios__input"
+                  [formControlName]="'cashLoyalty'"
+                  id="cashLoyalty"
+                  name="cashLoyalty"
+                  type="radio"
+                  [value]="option.value"
+                  (click)="onChange(option.value)"
+                />
+                <label class="govuk-label govuk-radios__label" for="cashLoyalty">
+                  {{ option.label }}
+                </label>
+              </div>
+
+              <div
+                *ngIf="option.value === 'Yes'"
+                class="govuk-radios__conditional"
+                [class.govuk-radios__conditional--hidden]="!showTextBox"
+                data-testid="grantLetterRadio-conditional"
+              >
+                <div class="govuk-form-group" *ngIf="this.form.get('cashAmount')">
+                  <label class="govuk-label" for="amountSpent">Amount (optional)</label>
+                  <span id="amountSpent-hint" class="govuk-hint">For example, 299.9</span>
+                  <span
+                    *ngIf="submitted && submittedWithAddtionalFields && this.form.get('cashAmount').errors"
+                    id="cashAmount-error"
+                    class="govuk-error-message"
+                  >
+                    <span class="govuk-visually-hidden">Error:</span>
+                    {{ getErrorMessage('cashAmount') }}
+                  </span>
+                  <div class="govuk-input__wrapper">
+                    <div class="govuk-input__prefix">£</div>
+                    <input
+                      class="govuk-input govuk-!-width-one-third"
+                      [class.govuk-input--error]="
+                        submitted && submittedWithAddtionalFields && form.get('cashAmount').invalid
+                      "
+                      id="cashAmount"
+                      formControlName="cashAmount"
+                      name="cashAmount"
+                      type="text"
+                    />
+                  </div>
+                </div>
+              </div>
+            </ng-container>
+          </div>
         </div>
       </fieldset>
     </div>
