--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 <div class="asc-progress-bar govuk-!-margin-right-2 govuk-!-margin-top-2">
   <div *ngIf="header">
-    <h4 class="govuk-!-margin-bottom-2">{{ header }}</h4>
+    <h4 class="govuk-!-margin-bottom-2 govuk-!-margin-top-0">{{ header }}</h4>
   </div>
   <ng-container *ngFor="let section of sections; index as i">
     <div class="govuk__flex">
