Changed section header

--- a/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
+++ b/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
@@ -11,7 +11,7 @@
       <fieldset class="govuk-fieldset">
         <div class="govuk-form-group govuk-!-margin-bottom-0" [class.govuk-form-group--error]="">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+            <span class="govuk-caption-l" data-testid="section-heading">Recruitment</span>
             <h1 class="govuk-fieldset__heading">
               How much money have you spent on advertising for staff in the last 4 weeks?
             </h1>
