--- a/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
+++ b/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
@@ -39,9 +39,5 @@
       </div>
     </div>
   </div>
-  <app-workplace-submit-button
-    [return]="!!return"
-    [recordSummary]="!this.inStaffRecruitmentFlow"
-    (clicked)="setSubmitAction($event)"
-  ></app-workplace-submit-button>
+  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
