--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -1,4 +1,7 @@
-<div class="asc-progress-bar govuk-!-margin-right-2 govuk-!-margin-top-2 govuk-!-margin-bottom-4">
+<div
+  class="asc-progress-bar govuk-!-margin-right-2 govuk-!-margin-top-2"
+  [ngClass]="{ 'govuk-!-margin-bottom-4': header === 'Recruitment' }"
+>
   <div *ngIf="header">
     <h4 class="govuk-!-margin-bottom-2 govuk-!-margin-top-1">{{ header }}</h4>
   </div>
