--- a/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
+++ b/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
@@ -1,4 +1,11 @@
-<form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
+<app-error-summary
+  *ngIf="(submitted && form.invalid) || serverError"
+  [formErrorsMap]="formErrorsMap"
+  [serverError]="serverError"
+  [form]="form"
+></app-error-summary>
+
+<form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <fieldset class="govuk-fieldset">
@@ -41,12 +48,22 @@
                   <label class="govuk-label" for="amountSpent">Amount (optional)</label>
                   <span id="amountSpent-hint" class="govuk-hint">For example, 299.9</span>
                   <span
-                    *ngIf="submitted && submittedWithAddtionalFields && this.form.get('cashAmount').errors"
+                    *ngIf="submitted && this.form.get('cashAmount').invalid"
                     id="cashAmount-error"
                     class="govuk-error-message"
                   >
                     <span class="govuk-visually-hidden">Error:</span>
-                    {{ getErrorMessage('cashAmount') }}
+                    <span *ngIf="this.form.get('cashAmount').errors.pattern">
+                      {{ getFormErrorMessage('cashAmount', 'pattern') }}
+                    </span>
+                    <span
+                      *ngIf="
+                        this.form.get('cashAmount').errors.greaterThanTwoDecimalPlaces &&
+                        !this.form.get('cashAmount').errors.pattern
+                      "
+                    >
+                      {{ getFormErrorMessage('cashAmount', 'greaterThanTwoDecimalPlaces') }}
+                    </span>
                   </span>
                   <div class="govuk-input__wrapper">
                     <div class="govuk-input__prefix">£</div>
@@ -78,15 +95,13 @@
         ></app-progress-bar>
       </div>
       <div *ngIf="!return && inStaffRecruitmentFlow" class="govuk-util__float-right">
-        <div class="govuk-!-margin-bottom-4">
-          <app-progress-bar
-            data-testid="progress-bar-2"
-            [header]="'Recruitment'"
-            [sections]="recruitmentSections"
-            [completeProgressBar]="true"
-            [currentSection]="section"
-          ></app-progress-bar>
-        </div>
+        <app-progress-bar
+          data-testid="progress-bar-2"
+          [header]="'Recruitment'"
+          [sections]="recruitmentSections"
+          [completeProgressBar]="true"
+          [currentSection]="section"
+        ></app-progress-bar>
         <app-progress-bar
           data-testid="progress-bar-3"
           [header]="'Staff benefits'"
