--- a/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
+++ b/src/app/features/workplace/staff-benefit-cash-loyalty/staff-benefit-cash-loyalty.component.html
@@ -97,7 +97,7 @@
           data-testid="progress-bar-2"
           [header]="'Recruitment'"
           [sections]="recruitmentSections"
-          [completeProgressBar]="true"
+          [completeProgressBar]="'true'"
           [currentSection]="section"
         ></app-progress-bar>
         <app-progress-bar
