--- a/src/app/features/workplace/benefits-statutory-sick-pay/benefits-statutory-sick-pay-component.html
+++ b/src/app/features/workplace/benefits-statutory-sick-pay/benefits-statutory-sick-pay-component.html
@@ -45,7 +45,7 @@
           data-testid="progress-bar-2"
           [header]="'Recruitment'"
           [sections]="recruitmentSections"
-          [completeProgressBar]="true"
+          [completeProgressBar]="'true'"
         ></app-progress-bar>
         <app-progress-bar
           data-testid="progress-bar-3"
