bug(adminDownloadMostRecentUpload): Changed how type is assigned to not check against filename and removed console.logs

--- a/src/app/features/bulk-upload/last-bulk-upload/last-bulk-upload.component.html
+++ b/src/app/features/bulk-upload/last-bulk-upload/last-bulk-upload.component.html
@@ -34,7 +34,7 @@
                 <a
                   [attr.data-testid]="'link-' + file.data.filename"
                   href="/bulk-upload/download/{{ encodeUrl(file.data.filename) }}"
-                  (click)="downloadFile($event, file.data.key)"
+                  (click)="downloadFile($event, file.data.key, file.data.fileType)"
                 >
                   {{ file.data.fileType | bulkUploadFileTypePipe }}
                 </a>
