--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -1,24 +1,70 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Add more details about your workplace</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-8 govuk__nowrap">Add more details about your workplace</h1>
 
     <p class="govuk-details__text">
-      We'll ask you a maximum of 11 questions. If necessary, you can skip the questions and answer them later in the
+      We'll ask you a maximum of 16 questions. If necessary, you can skip questions and answer them later in the
       Workplace section of ASC-WDS.
     </p>
 
     <p>We would like to know:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>whether you provide any other services</li>
-      <li>the capacity of the services that you provide (if applicable)</li>
-      <li>who uses your services</li>
-      <li>whether you have any current staff vacancies</li>
-      <li>whether you've had new starters or leavers in the last 12 months</li>
-      <li>how much money you've spent on advertising for new staff in the last 4 weeks</li>
-      <li>how many people you've interviewed in the last 4 weeks</li>
-      <li>whether new starters have to repeat training done with previous employers</li>
-      <li>whether you'd accept a Care Certificate from a worker's previous employer</li>
-      <li>whether we can share your data</li>
+      <li><p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">whether you provide any other services?</p></li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          the capacity of the services that you provide (if applicable)?
+        </p>
+      </li>
+      <li><p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">who uses your services?</p></li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">whether you have any current staff vacancies?</p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          whether you've had new starters or leavers in the last 12 months?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          how much money is being spent on advertising for staff?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          how many people are being interviewed for care worker roles?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0 govuk__nowrap">
+          whether new care workers have to repeat training done with previous employers?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0 govuk__nowrap">
+          whether Care Certificates are transferable from workplace to workplace?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0 govuk__nowrap">
+          whether a cash loyalty bonus is paid within the first 2 years of employment?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          whether care workers are paid more than statutory 'sick pay'?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          whether more than 3% is contributed towards care worker pensions?
+        </p>
+      </li>
+      <li>
+        <p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">
+          how many days holiday leave full-time care workers get?
+        </p>
+      </li>
+      <li><p class="govuk-!-margin-left-3 govuk-!-margin-bottom-0">whether we can share your data?</p></li>
     </ul>
     <a
       [routerLink]="['/workplace', establishment.uid, 'other-services']"
