add bold text to section if completed flag is true, and change grey text colour

--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -34,8 +34,7 @@
         <span
           class="govuk-!-font-size-16"
           [ngClass]="
-            completeProgressBar ||
-            (currentSectionIndex > i && 'govuk-!-font-weight-bold') ||
+            ((currentSectionIndex > i || completeProgressBar) && 'govuk-!-font-weight-bold') ||
             (currentSectionIndex < i && 'asc-colour-grey')
           "
         >
