--- a/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment.component.html
+++ b/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment.component.html
@@ -18,15 +18,18 @@
       <dt class="govuk-summary-list__key">Advertising spend</dt>
       <dd class="govuk-summary-list__value">
         <ng-container
-          *ngIf="!moneySpentOnAdvertisingInTheLastFourWeek; else moneySpentOnAdvertisingInTheLastFourWeekType"
+          *ngIf="
+            !establishment.moneySpentOnAdvertisingInTheLastFourWeeks;
+            else moneySpentOnAdvertisingInTheLastFourWeekType
+          "
         >
           -
         </ng-container>
         <ng-template #moneySpentOnAdvertisingInTheLastFourWeekType>
           <ng-container
             *ngIf="
-              moneySpentOnAdvertisingInTheLastFourWeek == 'None' ||
-                moneySpentOnAdvertisingInTheLastFourWeek == 'Don\'t know';
+              establishment.moneySpentOnAdvertisingInTheLastFourWeeks == 'None' ||
+                establishment.moneySpentOnAdvertisingInTheLastFourWeeks == 'Don\'t know';
               then moneySpentOnAdvertisingInTheLastFourWeeksNotKnown;
               else moneySpentOnAdvertisingInTheLastFourWeeksKnown
             "
@@ -34,17 +37,17 @@
           </ng-container>
         </ng-template>
         <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksNotKnown>
-          {{ moneySpentOnAdvertisingInTheLastFourWeek }}
+          {{ establishment.moneySpentOnAdvertisingInTheLastFourWeeks }}
         </ng-template>
         <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksKnown>
-          £{{ moneySpentOnAdvertisingInTheLastFourWeek }}
+          £{{ establishment.moneySpentOnAdvertisingInTheLastFourWeeks }}
         </ng-template>
       </dd>
       <dd *ngIf="canEditEstablishment" class="govuk-summary-list__actions" data-testid="advertisingSpend">
         <app-summary-record-change
           [explanationText]="' advertising spend'"
           [link]="['/', this.flow, this.establishment.uid, 'recruitment-advertising-cost']"
-          [hasData]="moneySpentOnAdvertisingInTheLastFourWeek"
+          [hasData]="establishment.moneySpentOnAdvertisingInTheLastFourWeeks"
           (setReturnClicked)="this.setReturn()"
         ></app-summary-record-change>
       </dd>
@@ -54,11 +57,13 @@
       <dt class="govuk-summary-list__key">People interviewed</dt>
 
       <dd class="govuk-summary-list__value asc__preline">
-        <ng-container *ngIf="!peopleInterviewedInTheLastFourWeek; else peopleInterviewedInTheLastFourWeekType">
+        <ng-container
+          *ngIf="!establishment.peopleInterviewedInTheLastFourWeeks; else peopleInterviewedInTheLastFourWeekType"
+        >
           -
         </ng-container>
         <ng-template #peopleInterviewedInTheLastFourWeekType>
-          {{ peopleInterviewedInTheLastFourWeek }}
+          {{ establishment.peopleInterviewedInTheLastFourWeeks }}
         </ng-template>
       </dd>
 
@@ -66,7 +71,7 @@
         <app-summary-record-change
           [explanationText]="' people interviewed'"
           [link]="['/', this.flow, this.establishment.uid, 'number-of-interviews']"
-          [hasData]="peopleInterviewedInTheLastFourWeek"
+          [hasData]="establishment.peopleInterviewedInTheLastFourWeeks"
           (setReturnClicked)="this.setReturn()"
         ></app-summary-record-change>
       </dd>
@@ -75,9 +80,16 @@
       <dt class="govuk-summary-list__key">Repeat training</dt>
 
       <dd class="govuk-summary-list__value asc__preline">
-        <ng-container *ngIf="!doNewStartersRepeatTraining; else doNewStartersRepeatTrainingType"> - </ng-container>
+        <ng-container
+          *ngIf="
+            !establishment.doNewStartersRepeatMandatoryTrainingFromPreviousEmployment;
+            else doNewStartersRepeatTrainingType
+          "
+        >
+          -
+        </ng-container>
         <ng-template #doNewStartersRepeatTrainingType>
-          {{ doNewStartersRepeatTraining }}
+          {{ establishment.doNewStartersRepeatMandatoryTrainingFromPreviousEmployment }}
         </ng-template>
       </dd>
 
@@ -85,7 +97,7 @@
         <app-summary-record-change
           [explanationText]="' repeat training'"
           [link]="['/', this.flow, this.establishment.uid, 'staff-recruitment-capture-training-requirement']"
-          [hasData]="doNewStartersRepeatTraining"
+          [hasData]="establishment.doNewStartersRepeatMandatoryTrainingFromPreviousEmployment"
           (setReturnClicked)="this.setReturn()"
         ></app-summary-record-change>
       </dd>
@@ -94,11 +106,16 @@
       <dt class="govuk-summary-list__key">Accept Care Certificate</dt>
 
       <dd class="govuk-summary-list__value asc__preline">
-        <ng-container *ngIf="!wouldYouAcceptPreviousCertificates; else wouldYouAcceptPreviousCertificatesType">
+        <ng-container
+          *ngIf="
+            !establishment.wouldYouAcceptCareCertificatesFromPreviousEmployment;
+            else wouldYouAcceptPreviousCertificatesType
+          "
+        >
           -
         </ng-container>
         <ng-template #wouldYouAcceptPreviousCertificatesType>
-          {{ wouldYouAcceptPreviousCertificates }}
+          {{ establishment.wouldYouAcceptCareCertificatesFromPreviousEmployment }}
         </ng-template>
       </dd>
 
@@ -106,7 +123,7 @@
         <app-summary-record-change
           [explanationText]="' accept care certificate'"
           [link]="['/', this.flow, this.establishment.uid, 'accept-previous-care-certificate']"
-          [hasData]="wouldYouAcceptPreviousCertificates"
+          [hasData]="establishment.wouldYouAcceptCareCertificatesFromPreviousEmployment"
           (setReturnClicked)="this.setReturn()"
         ></app-summary-record-change>
       </dd>
