Resolved back end issue
Co-authored-by: Alex Pope <popey2700@users.noreply.github.com>

--- a/src/app/features/workplace/pensions/pensions.component.html
+++ b/src/app/features/workplace/pensions/pensions.component.html
@@ -35,8 +35,8 @@
                   class="govuk-radios__input"
                   type="radio"
                   id="pensionsOption-{{ i }}"
-                  name="pensionsOption"
-                  [formControlName]="'pensionsOption'"
+                  name="pension"
+                  [formControlName]="'pension'"
                   [value]="option.value"
                 />
                 <label for="pensionsOption-{{ i }}" class="govuk-label govuk-radios__label">{{ option.label }}</label>
