change routing due to type-of-employer being moved into flow, backend adding type of employer in add-workplace flow

--- a/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
+++ b/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
@@ -19,10 +19,17 @@
       ></app-summary-list>
 
       <app-summary-list
-        [wrapBorder]="true"
+        [topBorder]="true"
         [summaryList]="totalStaff"
         (setReturn)="onSetReturn()"
         data-testid="totalStaff"
+      ></app-summary-list>
+
+      <app-summary-list
+        [wrapBorder]="true"
+        [summaryList]="typeOfEmployer"
+        (setReturn)="onSetReturn()"
+        data-testid="typeOfEmployer"
       ></app-summary-list>
     </div>
 
