--- a/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
@@ -6,7 +6,7 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
           <span class="govuk-caption-l">{{ section }}</span>
-          <h1 class="govuk-fieldset__heading">What type of employer is your workplace?</h1>
+          <h1 class="govuk-fieldset__heading">{{ question }}</h1>
         </legend>
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
           <span
