--- a/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment-and-benefits.component.html
+++ b/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment-and-benefits.component.html
@@ -148,7 +148,8 @@
           <ng-container
             *ngIf="
               establishment.careWorkersCashLoyaltyForFirstTwoYears == 'No' ||
-                establishment.careWorkersCashLoyaltyForFirstTwoYears == 'Don\'t know';
+                establishment.careWorkersCashLoyaltyForFirstTwoYears == 'Don\'t know' ||
+                establishment.careWorkersCashLoyaltyForFirstTwoYears == 'Yes';
               then careWorkersCashLoyaltyForFirstTwoYearsNotKnown;
               else careWorkersCashLoyaltyForFirstTwoYearsKnown
             "
@@ -158,7 +159,7 @@
             {{ establishment.careWorkersCashLoyaltyForFirstTwoYears }}
           </ng-template>
           <ng-template #careWorkersCashLoyaltyForFirstTwoYearsKnown>
-            Yes, £{{ establishment.careWorkersCashLoyaltyForFirstTwoYears }}
+            £{{ establishment.careWorkersCashLoyaltyForFirstTwoYears }}
           </ng-template>
         </ng-template>
       </dd>
