add employer type to registration screen, create a util for converting employer type db value to the value for showing on the front end, add bullet points to the add-workplace start page

--- a/src/app/features/add-workplace/start/start.component.html
+++ b/src/app/features/add-workplace/start/start.component.html
@@ -6,8 +6,10 @@
 
     <p>To add a new workplace, you'll need to know:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>the main service it provides and whether or not it's regulated by the Care Quality Commission (CQC)</li>
+      <li>their main service and whether it's regulated by the Care Quality Commission (CQC)</li>
       <li>the name and address of the workplace</li>
+      <li>what type of employer they are (for example local authority, private)</li>
+      <li>how many members of staff the workplace has</li>
     </ul>
 
     <div class="govuk-button-group">
