--- a/src/app/features/admin/registration-requests/registration-request/registration-request.component.html
+++ b/src/app/features/admin/registration-requests/registration-request/registration-request.component.html
@@ -91,6 +91,15 @@
           {{ registration.establishment.mainService }}
         </dd>
       </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Employer type</dt>
+        <dd class="govuk-summary-list__value">
+          <span>{{ registration.establishment.employerType.value }}</span>
+          <span *ngIf="registration.establishment.employerType.other"
+            >, {{ registration.establishment.employerType.other }}</span
+          >
+        </dd>
+      </div>
     </dl>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-8">Account details</h2>
