--- a/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
+++ b/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
@@ -43,16 +43,49 @@
         <a [routerLink]="['/workplace', workplace.uid, 'regulated-by-cqc']" (click)="setReturn()"> Change </a>
       </dd>
     </div>
+    <div class="govuk-summary-list__row" data-testid="employerType">
+      <dt class="govuk-summary-list__key">Employer type</dt>
+      <dd class="govuk-summary-list__value">
+        <app-summary-record-value
+          [wdfView]="wdfView"
+          [wdfValue]="workplace.wdf?.employerType"
+          [overallWdfEligibility]="overallWdfEligibility"
+        >
+          <ng-container *ngIf="!(workplace.employerType?.other || workplace.employerType?.value); else employertype">
+            -
+          </ng-container>
+          <ng-template #employertype>
+            {{ workplace.employerType?.other ? workplace.employerType.other : workplace.employerType.value }}
+          </ng-template>
+        </app-summary-record-value>
+      </dd>
+      <dd *ngIf="canEditEstablishment" class="govuk-summary-list__actions">
+        <app-summary-record-change
+          [explanationText]="' employer type'"
+          [link]="['/workplace', workplace.uid, 'type-of-employer']"
+          [hasData]="workplace.employerType?.other || workplace.employerType?.value"
+          (setReturnClicked)="this.setReturn()"
+        ></app-summary-record-change>
+      </dd>
+    </div>
     <div class="govuk-summary-list__row" data-testid="numberOfStaff">
       <dt
         class="govuk-summary-list__key"
-        [class.asc-no-border]="staffMismatchWarning() && convertToDate(workplace.eightWeeksFromFirstLogin) < now"
+        [class.asc-no-border]="
+          staffMismatchWarning() &&
+          workplace.eightWeeksFromFirstLogin &&
+          convertToDate(workplace.eightWeeksFromFirstLogin) < now
+        "
       >
         Number of staff
       </dt>
       <dd
         class="govuk-summary-list__value"
-        [class.asc-no-border]="staffMismatchWarning() && convertToDate(workplace.eightWeeksFromFirstLogin) < now"
+        [class.asc-no-border]="
+          staffMismatchWarning() &&
+          workplace.eightWeeksFromFirstLogin &&
+          convertToDate(workplace.eightWeeksFromFirstLogin) < now
+        "
       >
         <app-summary-record-value
           [wdfView]="wdfView"
@@ -83,7 +116,11 @@
       <dd
         *ngIf="canEditEstablishment"
         class="govuk-summary-list__actions"
-        [class.asc-no-border]="staffMismatchWarning() && convertToDate(workplace.eightWeeksFromFirstLogin) < now"
+        [class.asc-no-border]="
+          staffMismatchWarning() &&
+          workplace.eightWeeksFromFirstLogin &&
+          convertToDate(workplace.eightWeeksFromFirstLogin) < now
+        "
       >
         <app-summary-record-change
           *ngIf="
@@ -101,7 +138,13 @@
         ></app-summary-record-change>
       </dd>
     </div>
-    <ng-container *ngIf="staffMismatchWarning() && convertToDate(workplace.eightWeeksFromFirstLogin) < now">
+    <ng-container
+      *ngIf="
+        staffMismatchWarning() &&
+        workplace.eightWeeksFromFirstLogin &&
+        convertToDate(workplace.eightWeeksFromFirstLogin) < now
+      "
+    >
       <div class="govuk-summary-list__row spacer"></div>
       <div class="govuk-summary-list__row asc-warning-banner" data-testid="morerecords">
         <dt class="govuk-summary-list__key">
@@ -122,31 +165,6 @@
         <div></div>
       </div>
     </ng-container>
-    <div class="govuk-summary-list__row" data-testid="employerType">
-      <dt class="govuk-summary-list__key">Employer type</dt>
-      <dd class="govuk-summary-list__value">
-        <app-summary-record-value
-          [wdfView]="wdfView"
-          [wdfValue]="workplace.wdf?.employerType"
-          [overallWdfEligibility]="overallWdfEligibility"
-        >
-          <ng-container *ngIf="!(workplace.employerType?.other || workplace.employerType?.value); else employertype">
-            -
-          </ng-container>
-          <ng-template #employertype>
-            {{ workplace.employerType?.other ? workplace.employerType.other : workplace.employerType.value }}
-          </ng-template>
-        </app-summary-record-value>
-      </dd>
-      <dd *ngIf="canEditEstablishment" class="govuk-summary-list__actions">
-        <app-summary-record-change
-          [explanationText]="' employer type'"
-          [link]="['/workplace', workplace.uid, 'type-of-employer']"
-          [hasData]="workplace.employerType?.other || workplace.employerType?.value"
-          (setReturnClicked)="this.setReturn()"
-        ></app-summary-record-change>
-      </dd>
-    </div>
   </ng-container>
 
   <ng-container>
